<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/nsv_detail_fragment_wrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action_prev_step"
            android:textColor="@color/colorPrimaryLight"
            android:drawableStart="@drawable/ic_navigate_before_black_24dp"
            android:drawableLeft="@drawable/ic_navigate_before_black_24dp"
            android:drawablePadding="12dip"/>

        <Button
            android:id="@+id/btn_next_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action_next_step"
            android:textColor="@color/colorSecondaryInverseLight"
            android:background="@color/colorAccent"
            android:drawableStart="@drawable/ic_navigate_next_black_24dp"
            android:drawableLeft="@drawable/ic_navigate_next_black_24dp"
            android:drawablePadding="12dip"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_current_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/detail_list_item_horizontal"
            tools:text="3"
            android:layout_marginTop="25dp"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/step_divider"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_current_step"
            app:layout_constraintLeft_toRightOf="@id/tv_current_step"
            android:layout_marginLeft="4dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_divider"/>
        <TextView
            android:id="@+id/tv_total_steps"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_current_step"
            app:layout_constraintLeft_toRightOf="@id/step_divider"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6"
            android:textSize="18sp"
            android:text="@string/step_divider"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_step_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/detail_list_item_horizontal"
        android:layout_marginStart="@dimen/detail_list_item_top"
        android:layout_marginTop="@dimen/detail_list_item_top"
        android:padding="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="First, take out the laundry." />

    <TextView
        android:id="@+id/tv_step_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/detail_list_item_horizontal"
        android:layout_marginStart="@dimen/detail_list_item_top"
        android:layout_marginTop="@dimen/detail_list_item_top"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1. First, take out the laundry and stuff." />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="260dp">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/detail_list_item_horizontal"
        android:layout_marginStart="@dimen/detail_list_item_top"
        android:layout_marginTop="@dimen/detail_list_item_top"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_photo_size_select_actual_black_24dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="First, take out the laundry." />
</LinearLayout>
</android.support.v4.widget.NestedScrollView>